# CMake settings
cmake_minimum_required(VERSION 2.8)

# Features
set(IO_ENABLE_VTK_WRAPPERS 0 CACHE BOOL "Enable VTK wrappers (requires the library Boost)")

# Required libraries
if (IO_ENABLE_VTK_WRAPPERS)
	set(IO_REQUIRED_BOOST_VERSION "1.50.0" CACHE INTERNAL "Required version of the Boost library" FORCE)
	find_package(Boost ${IO_REQUIRED_BOOST_VERSION} REQUIRED)
endif()

# VTK Wrappers feature
set(IO_VTK_WRAPPERS_HEADER_HPP "Class_VTK_Wrappers.hpp")
set(IO_VTK_WRAPPERS_HEADER_TPP "Class_VTK_Wrappers.tpp")
set(IO_VTK_WRAPPERS_SOURCE_CPP "Class_VTK_Wrappers.cpp")
set(IO_VTK_WRAPPERS_DEFINITION "IO_ENABLE_VTK_WRAPPERS")

# Add library to targets
include_directories("${PROJECT_SOURCE_DIR}/src/operators")
if (IO_ENABLE_VTK_WRAPPERS)
	include_directories("${Boost_INCLUDE_DIRS}")
endif()

file(GLOB SOURCE_FILES "*.cpp")
if (NOT IO_ENABLE_VTK_WRAPPERS)
	list(REMOVE_ITEM SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/${IO_VTK_WRAPPERS_SOURCE_CPP}")
endif()
set(IO_SOURCES "${SOURCE_FILES}" CACHE INTERNAL "Sources of IO Library" FORCE)
unset(SOURCE_FILES)

file(GLOB HEADER_FILES "*.hpp" "*.tpp")
if (NOT IO_ENABLE_VTK_WRAPPERS)
	list(REMOVE_ITEM HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/${IO_VTK_WRAPPERS_HEADER_HPP}")
	list(REMOVE_ITEM HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/${IO_VTK_WRAPPERS_HEADER_TPP}")
endif()
set(IO_HEADERS "${HEADER_FILES}" CACHE INTERNAL "Headers of IO Library" FORCE)
unset(HEADER_FILES)

if (NOT "${IO_SOURCES}" STREQUAL "")
	add_library(IO_TARGET_OBJECT OBJECT ${IO_SOURCES})
endif ()

install(FILES ${IO_HEADERS} DESTINATION include/${CMAKE_PROJECT_NAME})

# Definitions
set(IO_DEFINITIONS_DESCRIPTION "Pre-processor definitions needed by IO Library")
if (IO_ENABLE_VTK_WRAPPERS)
	add_definitions(-D${IO_VTK_WRAPPERS_DEFINITION})

	set(IO_DEFINITIONS "${IO_VTK_WRAPPERS_DEFINITION}" CACHE INTERNAL "${IO_DEFINITIONS_DESCRIPTION}" FORCE)
else ()
	set(IO_DEFINITIONS "" CACHE INTERNAL "${IO_DEFINITIONS_DESCRIPTION}" FORCE)
endif()
